<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:id="@+id/title_changle"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center"
        android:text="@string/meishi9"
        android:background="@color/luse"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:background="@color/baise"
        android:orientation="vertical">
        <ImageView
            android:layout_marginTop="10dp"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/photo"
            android:layout_gravity="center"/>

    </LinearLayout>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:background="@color/huise"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:background="@color/baise"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sjmc"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yysj"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/huise1"
                android:text="@string/yysj1"/>
            <TextView
                android:layout_marginLeft="20dp"
                android:layout_width="wrap_content"
                android:textColor="@color/huise1"
                android:layout_height="wrap_content"
                android:text="@string/yysj2"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:textColor="@color/huise1"
                android:text="@string/yysj2"/>
        </LinearLayout>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/rjxf1"
            android:text="@string/rjxf"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/jldw1"
            android:text="@string/jldw"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/dz1"
            android:text="@string/dz"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/lxr1"
            android:text="@string/lxr"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/dh1"
            android:text="@string/dh"/>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:background="@color/huise"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/baise"
            android:layout_marginLeft="10dp"
            android:textColor="@color/huise1"
            android:text="@string/txxq"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@color/huise1"
            android:orientation="horizontal">
            <TextView
                android:layout_width="140dp"
                android:layout_height="35dp"
                android:text="@string/bccg"
                android:layout_marginTop="3dp"
                android:paddingLeft="35dp"
                android:paddingTop="7dp"
                android:layout_marginLeft="20dp"
                android:background="@drawable/bc"
                android:textColor="@color/luse"/>
            <TextView
                android:layout_width="140dp"
                android:layout_height="35dp"
                android:text="@string/ljfb"
                android:layout_marginTop="3dp"
                android:paddingLeft="35dp"
                android:paddingTop="7dp"

                android:layout_marginLeft="40dp"
                android:background="@drawable/bc1"
                android:textColor="@color/baise"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>